[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/DialogEditor/icons/Folder.svg" type="Texture" id=1]
[ext_resource path="res://addons/DialogEditor/icons/Reload.svg" type="Texture" id=2]
[ext_resource path="res://addons/DialogEditor/DialogEditorSettings.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="DialogEditorSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 984.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 14.0
text = "Dialog Editor Settings"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 984.0
margin_bottom = 22.0

[node name="BakePath" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 984.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/BakePath"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Bake Save Path"

[node name="Path" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/BakePath"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Reset" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path"]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path"]
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://"
placeholder_text = "Folder where Bakes are Saved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path"]
margin_left = 462.0
margin_right = 490.0
margin_bottom = 24.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePath" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SavePath"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Graph Save Path"

[node name="Path" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SavePath"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Reset" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path"]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path"]
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://addons/DialogEditor/Saves/"
placeholder_text = "Folder where Bakes are Saved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path"]
margin_left = 462.0
margin_right = 490.0
margin_bottom = 24.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipEmpty" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 984.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Skip Empty Dialog Nodes"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Reset" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty/HBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 2 )

[node name="CheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="SelectBakePath" type="FileDialog" parent="."]
margin_right = 554.0
margin_bottom = 309.0
window_title = "Verzeichnis wählen"
resizable = true
mode = 2

[node name="SelectSavePath" type="FileDialog" parent="."]
margin_right = 508.0
margin_bottom = 292.0
window_title = "Verzeichnis wählen"
mode = 2
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path/Reset" to="." method="_on_Reset_pressed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/BakePath/Path/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path/Reset" to="." method="_on_Reset_SavePath_pressed"]
[connection signal="text_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path/LineEdit" to="." method="_on_LineEdit_SavePath_text_changed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SavePath/Path/Button" to="." method="_on_Button_SavePath_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty/HBoxContainer/Reset" to="." method="_on_Reset_SkipEmpty_pressed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/SkipEmpty/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="dir_selected" from="SelectBakePath" to="." method="_on_SelectBakePath_dir_selected"]
[connection signal="dir_selected" from="SelectSavePath" to="." method="_on_SelectSavePath_dir_selected"]
